<resources>
    <string name="app_name">Organisation Communication System</string>
    <string name="title" translatable="false">@string/app_name</string>
    <string name="log_in">LOG IN</string>
    <string name="copyright">©2018–2023 BobHam.All Rights Reserved.</string>
    <string name="USERNAME">Username :</string>
    <string name="PASSWORD">Password :</string>
    <string name="password">password</string>
    <string name="submit">submit</string>
    <string name="tip_ifEmpty">EMPTY: Please input your information completely.</string>
    <string name="add" translatable="false">+</string>
    <string name="exit_dialog">Sure to exit?</string>
    <string name="typingTip">TYPE CAREFULLY</string>
    <string name="correct">CORRECT</string>
    <string name="incorrect">INCORRECT</string>
    <string name="languageChooser">Choose your target language</string>
    <string name="hint_dialog">Hint</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="ClearLanguageSetting">DeleteLanguagePreferences</string>
    <string name="delete">Delete language preferences successfully</string>
    <string name="exit_message">One more time to exit.</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="hideDraw">Hide Board</string>
    <string name="showDraw">Show Board</string>
    <string name="resetDraw">Reset Board</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="file">File</string>
</resources>