<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/favorite"
            android:title="收藏" />
        <item
            android:id="@+id/wallet"
            android:title="钱包" />
        <item
            android:id="@+id/photo"
            android:title="相册" />
        <item
            android:id="@+id/file"
            android:title="@string/file" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:title="@string/about" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share_black_24dp"
            android:iconTint="@color/white"
            android:title="@string/share" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:iconTint="@color/white"
            android:title="@string/refresh" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:iconTint="@color/white"
            android:title="@string/exit" />
    </group>

</menu>