<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_autorenew_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="withText|ifRoom" />

    <item

        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:iconTint="@color/orange"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/exit"
        app:iconTint="@android:color/holo_red_light"
        app:showAsAction="withText" />
</menu>

