<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    android:backgroundTint="@color/colorPrimaryDark"
    android:backgroundTintMode="add"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_gap"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_gap"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="150dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp">

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/LOGIN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:shadowColor="#f6f4f4"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/log_in"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="32sp"
                    android:transitionName="share" />
            </LinearLayout>

            <View
                android:layout_width="150dp"
                android:layout_height="1dip"
                android:layout_marginStart="24dp"
                android:background="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap"
            android:background="#2f757ec1"
            android:orientation="vertical"
            android:padding="@dimen/default_gap">

            <LinearLayout
                android:id="@+id/view_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/USERNAME"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/USERNAME"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:popupBackground="#00000000"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/add"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="1"
                        tools:textColor="#faea00"
                        tools:textSize="30sp" />

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/editText5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="number" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PASSWORD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PASSWORD"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="numberPassword" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_tip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tip_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/ic_error_red_24dp" />

                <TextView
                    android:id="@+id/tip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    tools:text="abc" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteLanguagePreferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="deleteOnClick"
                android:text="@string/ClearLanguageSetting" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitOnClick"
                android:text="@string/submit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="temp"
                android:text="临时登录通道" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>